# ESP32_LVGL_MusicPlayer

./: README.md  platformio.ini
lib/: lv_conf.h
lib/Music/: Music.cpp  Music.h
lib/TFT_eSPI/: User_Setup.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_comp_hook.c  ui_events.cpp  ui_events.h  ui_font_HONOR_Light12.c  ui_helpers.c  ui_helpers.h  ui_img_bofang1_png.c  ui_img_bofang2_png.c  ui_img_caidan_png.c  ui_img_citou_png.c  ui_img_fanhui_png.c  ui_img_haibao_png.c  ui_img_jiaopian_png.c  ui_img_list_loop_png.c  ui_img_random_play_png.c  ui_img_shangyi1_png.c  ui_img_shangyi2_png.c  ui_img_single_loop_png.c  ui_img_xiyi1_png.c  ui_img_xiyi2_png.c  ui_img_yinliang_png.c  ui_img_zanting1_png.c  ui_img_zanting2_png.c
src/: main.cpp
